--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "sass-loader": "^10.1.0",
     "socket.io-client": "^3.0.4",
     "vue-class-component": "^7.2.6",
+    "vue-color": "^2.8.0",
     "vue-property-decorator": "^9.1.2",
     "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
-    "@nuxt/typescript-build": "^2.0.3"
+    "@nuxt/typescript-build": "^2.0.3",
+    "@types/vue-color": "^2.4.3"
   }
 }
