--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/composition-api": "^0.16.4",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.0.2",
     "@types/socket.io-client": "^1.4.34",
     "@vue/composition-api": "^1.0.0-beta.20",
@@ -25,7 +26,8 @@
     "vue-class-component": "^7.2.6",
     "vue-color": "^2.8.0",
     "vue-property-decorator": "^9.1.2",
-    "vue-socket.io": "^3.0.10"
+    "vue-socket.io": "^3.0.10",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
