--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nuxtjs/composition-api": "^0.16.4",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.0.2",
+    "@types/axios": "^0.14.0",
     "@types/socket.io-client": "^1.4.34",
     "@vue/composition-api": "^1.0.0-beta.20",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "fibers": "^5.0.0",
     "nuxt": "^2.14.6",
