--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt-ts generate"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/composition-api": "^0.16.4",
     "@nuxtjs/proxy": "^2.1.0",
@@ -17,14 +19,28 @@
     "@types/axios": "^0.14.0",
     "@types/socket.io-client": "^1.4.34",
     "@vue/composition-api": "^1.0.0-beta.20",
+    "apollo": "^2.32.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "fetch": "^1.1.0",
+    "fiber": "^1.0.4",
     "fibers": "^5.0.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "node-fetch": "^2.6.1",
     "nuxt": "^2.14.6",
     "nuxt-socket-io": "^1.1.13",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "socket.io-client": "^3.0.4",
+    "subscriptions-transport-ws": "^0.9.18",
+    "vue-apollo": "^3.0.5",
     "vue-class-component": "^7.2.6",
     "vue-color": "^2.8.0",
     "vue-property-decorator": "^9.1.2",
@@ -34,6 +50,8 @@
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
-    "@types/vue-color": "^2.4.3"
+    "@types/node-fetch": "^2.5.8",
+    "@types/vue-color": "^2.4.3",
+    "chalk": "2.2.0"
   }
 }
